Fixed: Scroll bar visible even when preview text context was not scrollable

--- a/src/sass/content-script/_preview.scss
+++ b/src/sass/content-script/_preview.scss
@@ -43,7 +43,7 @@
       width: calc(100% - 40px);
       max-height: 30%;
       overflow-x: hidden;
-      overflow-y: scroll;
+      overflow-y: auto;
       padding: 1rem;
       box-sizing: border-box;
       opacity: 0;
